--- a/alarm_clock/Base.lproj/Main.storyboard
+++ b/alarm_clock/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6rr-YH-XrQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6rr-YH-XrQ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -16,41 +16,12 @@
                     </tabBar>
                     <connections>
                         <segue destination="cWI-3O-vhp" kind="relationship" relationship="viewControllers" id="T9t-4B-4rf"/>
-                        <segue destination="yuP-xJ-VAM" kind="relationship" relationship="viewControllers" id="Y7g-9O-9Y9"/>
+                        <segue destination="Nmj-Zn-GHc" kind="relationship" relationship="viewControllers" id="kM3-po-8Zl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oAi-7e-Wqi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="31" y="14"/>
-        </scene>
-        <!--Table View Controller - Friends-->
-        <scene sceneID="PUm-Fg-Mlx">
-            <objects>
-                <tableViewController id="yuP-xJ-VAM" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dxe-3P-KeV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="a40-ta-Chm">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a40-ta-Chm" id="8RP-Pc-fme">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="yuP-xJ-VAM" id="OAF-SL-5kW"/>
-                            <outlet property="delegate" destination="yuP-xJ-VAM" id="rtz-pj-PCd"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Friends" image="82-dog-paw.png" id="ous-7R-Lzq"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IaX-Dn-39P" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="565" y="334"/>
         </scene>
         <!--New Alarm View Controller-->
         <scene sceneID="oY0-Vr-yrU">
@@ -171,6 +142,66 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bf8-Y4-ldH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="570" y="-352"/>
+        </scene>
+        <!--Contacts Selector Table View Controller - Friends-->
+        <scene sceneID="li6-Ap-AF9">
+            <objects>
+                <tableViewController storyboardIdentifier="contactsSelectorTableViewController" title="Friends" id="hrr-ly-DUh" customClass="ALContactsSelectorTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="nhZ-Ki-YQT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qBF-X8-EsB">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qBF-X8-EsB" id="6ug-DO-7ug">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hrr-ly-DUh" id="AiH-YK-SEP"/>
+                            <outlet property="delegate" destination="hrr-ly-DUh" id="OpA-wZ-Mmi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="kOt-cx-FYm"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vnX-pW-taM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142" y="361"/>
+        </scene>
+        <!--Show Friend View Controller - Friend-->
+        <scene sceneID="aTe-MT-IkV">
+            <objects>
+                <viewController storyboardIdentifier="showFriendViewController" title="Friend" id="M1p-KC-xog" customClass="ALShowFriendViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Gfy-vk-xJb"/>
+                        <viewControllerLayoutGuide type="bottom" id="mbf-MQ-7R8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tzm-FC-vBS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V2d-rx-6zb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142" y="1029"/>
+        </scene>
+        <!--Friends Navigation Controller - friendsNavigationController-->
+        <scene sceneID="qYJ-G0-jdZ">
+            <objects>
+                <navigationController storyboardIdentifier="friendsNavigationController" title="friendsNavigationController" definesPresentationContext="YES" id="Nmj-Zn-GHc" customClass="ALFriendsNavigationController" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Friends" image="82-dog-paw.png" id="erq-14-hU2"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VcJ-oW-nfl">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oAa-aR-dyK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="576" y="361"/>
         </scene>
     </scenes>
     <resources>
